ARROW-9588: [C++] Partially support building with clang in an MSVC setting

This is only half the work, thus we don't have a test for this yet but I wanted to upstream this to have a local diff less lying around.

Closes #8114 from xhochy/clang-msvc-windows

Lead-authored-by: Uwe L. Korn <uwe.korn@quantco.com>
Co-authored-by: Uwe L. Korn <xhochy@users.noreply.github.com>
Signed-off-by: Antoine Pitrou <antoine@python.org>